--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "boltbucket",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"cd client && vite\" \"cd server && nodemon server\"",
+    "dev": "concurrently \"cd client && vite\" \"cd server && NODE_ENV=development nodemon server\"",
     "start": "cd server && node server",
     "build": "cd client && vite build"
   },
   "dependencies": {
     "@picocss/pico": "^1.5.7",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.21",
